<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Street Saarthi</string>
    <string name="no_image_found" translatable="false">No image found</string>
    <string name="street_vendor_system" translatable="false">Street\nSaarthi</string>
    <string name="street_vendor_management_system" translatable="false">STREET VENDOR\nMANAGEMENT\nSYSTEM</string>
    <string name="street_vendor_management_system_under" translatable="false"><u>STREET VENDOR MANAGEMENT\nSYSTEM</u></string>
    <string name="PoweredbyVegaSegaSolutions" translatable="false">Powered by Vega Sega Solutions LLP</string>
    <string name="NationalAssociation" translatable="false">Vega Sega Solutions LLP</string>
    <string name="AnInitiativeBy" translatable="false">An Initiative By</string>
    <string name="ConnectingStreetVendorsAllOverIndia" translatable="false">Connecting Street Vendors All Over India</string>
    <string name="StreetVendorSystem" translatable="false">Street Vendor System</string>
    <string name="powered_by_national_association_of_street_vendors_of_india" translatable="false">Powered by <b><u>Vega Sega Solutions LLP</u></b></string>
    <string name="street_saarthi" translatable="false">Street Saarthi</string>
    <string name="google_place_key" tools:ignore="MissingTranslation">AIzaSyDqrSqm6Q271vRoV3PWsZW59W1y2vREHew</string>
    <string name="click_here_to_agree_to_the"><![CDATA[Click Here to agree on the]]></string>
    <string name="terms_amp_conditions"><u>Terms &amp; Conditions</u></string>
    <string name="Pleaseselectagree">Please select agree on the Terms &amp; Conditions</string>
    <string name="title">Title</string>
    <string name="submit" translatable="false">Submit</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="quick_registation">Quick Register</string>
    <string name="loginWithPassword">Login With Password</string>
    <string name="loginWithMobileOTP">Login With Mobile OTP</string>
    <string name="enterOtp">Enter OTP</string>
    <string name="completeProfileRegistration">Complete Profile Registration</string>
    <string name="fast_process">Fast Process</string>
    <string name="login_here">Login Here</string>
    <string name="enter_your_login_details_here">Enter Your Login Details Here</string>
    <string name="login_with_otp">Login With OTP</string>
    <string name="quick_registration">Quick Registration</string>
    <string name="enter_your_details_for_quick_register">Enter Your Details For Quick Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="createPassword">Create Password</string>
    <string name="EnterPassword">Enter Password</string>
    <string name="reEnterPassword">Re-Enter Password</string>
    <string name="enterMobileNumber">Enter Valid Mobile Number</string>
    <string name="login">Login</string>
    <string name="explore_app">Explore App</string>
    <string name="register">Register</string>
    <string name="LearnAboutSchemes">Learn About Schemes</string>
    <string name="ComplaintRedressal">Complaint Redressal</string>
    <string name="KnowYourRights">Know Your Rights</string>
    <string name="desc1">Know about the latest schemes that are applicable to you.</string>
    <string name="desc2">Quick filing, monitoring and timely resolution of all your complaints.</string>
    <string name="desc3">Learn here about what your legal and civil rights are, how to exercise them.</string>
    <string name="SelectLanguage">Select Language</string>
    <string name="english" translatable="false">English</string>
    <string name="bengali" translatable="false">বাংলা</string>
    <string name="gujarati" translatable="false">ગુજરાતી</string>
    <string name="hindi" translatable="false">हिन्दी</string>
    <string name="kannada" translatable="false">ಕನ್ನಡ</string>
    <string name="malayalam" translatable="false">മലയാളം</string>
    <string name="marathi" translatable="false">मराठी</string>
    <string name="punjabi" translatable="false">ਪੰਜਾਬੀ</string>
    <string name="tamil" translatable="false">தமிழ்</string>
    <string name="telugu" translatable="false">తెలుగు</string>
    <string name="assamese" translatable="false">অসমীয়া</string>
    <string name="urdu" translatable="false">اردو</string>
    <string name="englishVal" translatable="false">en</string>
    <string name="bengaliVal" translatable="false">bn</string>
    <string name="gujaratiVal" translatable="false">gu</string>
    <string name="hindiVal" translatable="false">hi</string>
    <string name="kannadaVal" translatable="false">kn</string>
    <string name="malayalamVal" translatable="false">ml</string>
    <string name="marathiVal" translatable="false">mr</string>
    <string name="punjabiVal" translatable="false">pa</string>
    <string name="tamilVal" translatable="false">ta</string>
    <string name="teluguVal" translatable="false">te</string>
    <string name="assameseVal" translatable="false">as</string>
    <string name="urduVal" translatable="false">ur</string>
    <string name="RegisterHere">Register Here</string>
    <string name="SelectYourchoiceofregistration">Select Your choice of registration</string>
    <string name="continues">Continue</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="YourPassword">Your Password</string>
    <string name="register_for_new_account">Register For New Account?</string>
    <string name="Forgot">Forgot</string>
    <string name="ForgotPassword">Forgot Password</string>
    <string name="EnterDetailstoSetpassword">Enter Details to Set password</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="set_password">Set Password</string>
    <string name="back_to_login">Back To Login</string>
    <string name="back">Back</string>
    <string name="enter_details_to_register_with_us">Enter Details To Register With Us</string>
    <string name="profile_details">Profile Details</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="someone_from_our_team_will_contact_you_within_48hrs_to_verify_your_registration">Someone from our team will contact you within 48 Hrs to verify your registration.</string>
    <string name="RegisterNow">Register Now</string>
    <string name="resendOtp">Re-send OTP</string>
    <string name="OTPnotverified">OTP Not Verified</string>
    <string name="YourNewPassword">Your New Password</string>
    <string name="back_to_home">Back To Home</string>
    <string name="back_to_home_u"><u>Back To Home</u></string>
    <string name="CreatePasswordReEnterPasswordisnotsame">*Password Not Match</string>
    <string name="InvalidPassword">*Minimum 8 characters containing 1 Uppercase, 1 Lowercase, 1 Number &amp; 1 Special Character</string>
    <string name="father_s_first_name">Father\'s First Name</string>
    <string name="father_s_last_name">Father\'s Last Name</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="social_category">Category</string>
    <string name="education_qualifacation">Education Qualification</string>
    <string name="select_state">State</string>
    <string name="select_district">District</string>
    <string name="municipality_panchayat">Municipality/Panchayat</string>
    <string name="select_pincode">Pincode</string>
    <string name="marital_status">Marital Status</string>
    <string name="spouse_s_name">Spouse\'s Name</string>
    <string name="enter_address">Enter Address</string>
    <string name="current_residential_address">Current Residential Address</string>
    <string name="age_minimum">Your age should be minimum 14 years</string>
    <string name="type_of_market_place">Type of Market Place</string>
    <string name="type_of_vending">Type of Vending</string>
    <string name="total_years_of_vending">Total Years of Vending</string>
    <string name="current_location_of_business">Current Location of Business</string>
    <string name="upload_shop_image">Upload Shop Image</string>
    <string name="upload_cov">Upload COV</string>
    <string name="upload_lor">Upload LOR</string>
    <string name="camera">Camera</string>
    <string name="open_camera_to_capture_image">Open Camera to Capture Image</string>
    <string name="photos">Photos</string>
    <string name="browse_images_from_gallery">Browse Images From Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="choose_your_preference">Choose Your Preference</string>
    <string name="complete_profile_registration">Complete Profile Registration</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="current_vending_address">Current Vending Address</string>
    <string name="vending_time">Vending Time</string>
    <string name="to">to</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="open_time">Open Time</string>
    <string name="close_time">Close Time</string>
    <string name="document_details">Document Details</string>
    <string name="do_you_have_vending_documents">Do you have vending documents?</string>
    <string name="do_you_have_government_scheme">Have you availed any government scheme?</string>
    <string name="cov_lor_survey_receipt_challan_approval_letter_from_municipal_body">(COV/LOR/Survey Receipt/Challan/Approval Letter from Municipal Body)</string>
    <string name="government_scheme">Government Scheme</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upload_survey_receipt">Upload Survey Receipt</string>
    <string name="upload_challan">Upload Challan</string>
    <string name="upload_approval_letter_from_municipality">Upload Approval Letter From Municipality</string>
    <string name="pm_swanidhi_scheme">PM Swanidhi Scheme</string>
    <string name="pm_swanidhi_schemeSingle" translatable="false">PM_Swanidhi_Scheme</string>
    <string name="others_please_name">Others, Please Name</string>
    <string name="scheme_name">Scheme Name</string>
    <string name="professional_details">Professional Details</string>
    <string name="personal_details">Personal\nDetails</string>
    <string name="professional_details_2">Professional\nDetails</string>
    <string name="SetPassword_details">Set\nPassword</string>
    <string name="passport_size_image">Passport Size Image</string>
    <string name="upload_media">Upload Media</string>
    <string name="aadhar_voter_id_pan_card_driving_license">(Aadhar / Voter ID / PAN Card / Driving License)</string>
    <string name="address_mention_village">Address (Mention Village)</string>
    <string name="upload_shop">Upload Shop Image</string>
    <string name="identification_image">Identification Image</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="or">OR</string>
    <string name="enterOtpHere">Enter OTP Here</string>
    <string name="live_schemes">Live Schemes</string>
    <string name="search">Search</string>
    <string name="x_close">X Close</string>
    <string name="edit">Edit</string>
    <string name="nominee_details">Nominee Details</string>
</resources>