<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/_10sdp"
    android:paddingVertical="@dimen/_10sdp">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp"
        app:fontFamily="@font/roboto_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btNominee"
        app:layout_constraintTop_toTopOf="parent"

        tools:ignore="HardcodedText" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderEditTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:fontFamily="@font/roboto_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="@dimen/_5sdp"
        android:drawableStart="@drawable/bxs_edit"
        android:drawablePadding="@dimen/_5sdp"
        tools:ignore="HardcodedText"
        android:visibility="gone"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderCountTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/live_schemes"
        android:textColor="@color/_79747E"
        android:textSize="@dimen/_11sdp"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintStart_toEndOf="@+id/textHeaderTxt"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_2sdp"
        tools:ignore="HardcodedText"
        android:visibility="gone"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btClose"
        style="@style/PrimaryButtonYellow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/x_close"
        app:iconTint="@color/white"
        android:backgroundTint="@color/_ED2525"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="@dimen/_4sdp"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btNominee"
        style="@style/PrimaryButtonYellow"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_25sdp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/nominee_details"
        app:iconTint="@color/white"
        android:backgroundTint="@color/_E79D46"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cornerRadius="@dimen/_4sdp"
        android:textSize="@dimen/_10sdp"
        android:visibility="gone"
        app:icon="@drawable/nominee"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextSearch"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        style="@style/PrimaryEditText"
        android:hint="@string/search"
        android:text=""
        android:drawableEnd="@drawable/ic_search"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderTxt"
        android:drawableTint="@color/_868686"
        android:layout_marginHorizontal="0dp"
        android:imeOptions="actionSearch"
        android:inputType="text|textNoSuggestions"
        android:maxLines="1"
        android:lines="1"
        android:singleLine="true"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/_10sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>