<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">





    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageLogo"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_98sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/main_logo"
        android:layout_marginBottom="@dimen/_5sdp"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderadfdsfTxt3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_22sdp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/_7sdp"
        app:textAllCaps="true"
        android:text="@string/street_saarthi"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderTxt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_11sdp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@+id/textHeaderadfdsfTxt3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:fontFamily="@font/roboto_regular"
        android:layout_marginTop="@dimen/_5sdp"
        android:text="@string/ConnectingStreetVendorsAllOverIndia"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btLanguage"
        style="@style/PrimaryButtonWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:paddingVertical="@dimen/_12sdp"
        android:text="@string/SelectLanguage"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/btSignIn"
        android:gravity="start|center_vertical"
        android:drawableEnd="@drawable/mdi_arrow_dow"
        android:textSize="@dimen/_12sdp"
        />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignIn"
        style="@style/PrimaryButtonYellow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/explore_app"
        android:backgroundTint="@color/_999999"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toTopOf="@+id/textHeaderTxt1"
        android:textSize="@dimen/_13sdp"
        />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textHeaderTxt1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_10sdp"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints"
        app:fontFamily="@font/roboto_regular"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/NationalAssociation"
        />


</androidx.constraintlayout.widget.ConstraintLayout>