<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <include layout="@layout/top_frame"
        android:id="@+id/top_frame"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        android:background="@drawable/bg_top_round_corner"
        app:layout_constraintTop_toBottomOf="@+id/top_frame"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/textBack"
            android:scrollbars="vertical"
            android:scrollbarSize="@dimen/_3sdp"
            android:scrollbarThumbVertical="@color/_E79D46"
            android:fadeScrollbars="false"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/_10sdp"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textHeaderadfdsfTxt31"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp"
                    android:gravity="center"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints"
                    app:fontFamily="@font/roboto_bold"
                    android:text="@string/login_with_otp"
                    />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textHeaderTxt22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11sdp"
                    android:gravity="center"
                    android:layout_marginHorizontal="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_25sdp"
                    app:layout_constraintTop_toBottomOf="@+id/textHeaderadfdsfTxt31"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:ignore="MissingConstraints"
                    app:fontFamily="@font/roboto_medium"
                    android:layout_marginTop="@dimen/_7sdp"
                    android:text="@string/enter_your_login_details_here"
                    />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextMobileNumber"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    style="@style/PrimaryEditText"
                    android:hint="@string/mobileNumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text=""
                    android:layout_marginTop="@dimen/_18sdp"
                    android:imeOptions="actionNext"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/editTextSendOtp"
                    app:layout_constraintTop_toBottomOf="@+id/textHeaderTxt22"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editTextSendOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    style="@style/PrimaryButtonYellow"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:hint="@string/Forgot"
                    android:inputType="number"
                    android:text="@string/send_otp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="@dimen/_18sdp"
                    app:layout_constraintTop_toBottomOf="@+id/textHeaderTxt22"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:gravity="center"
                    android:backgroundTint="@color/_E79D46"
                    android:layout_marginEnd="@dimen/_10sdp"
                    app:cornerRadius="@dimen/_5sdp"
                    android:textSize="@dimen/_11sdp"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:includeFontPadding="false"
                    android:text="00:27"
                    android:textColor="@color/_B3261E"
                    android:textSize="@dimen/_11sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editTextMobileNumber"
                    android:layout_marginHorizontal="@dimen/_25sdp"
                    android:gravity="end"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:visibility="gone"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextOtp"
                    style="@style/PrimaryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="12dp"
                    android:hint="@string/enterOtpHere"
                    android:inputType="number"
                    android:maxLength="6"
                    android:text=""
                    android:imeOptions="actionDone"
                    app:layout_constraintTop_toBottomOf="@+id/tvTime"
              />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editTextVeryfyOtp"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/white_round_corner"
                    style="@style/PrimaryEditText"
                    android:hint="@string/Forgot"
                    android:inputType="number"
                    android:text="@string/verify_otp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTime"
                    android:focusable="false"
                    android:backgroundTint="@color/_999999"
                    android:visibility="gone"
                    />





                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSignIn"
                    style="@style/PrimaryButtonYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:paddingVertical="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:text="@string/login"
                    android:backgroundTint="@color/_999999"
                    android:layout_weight="1"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/editTextOtp"
                    />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutOr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btSignIn"
                    >

                    <View
                        android:id="@+id/textViewLeft"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/textTitleMain"
                        app:layout_constraintStart_toStartOf="parent"
                        tools:ignore="MissingConstraints"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:text="@string/profile_details"
                        android:visibility="visible"
                        android:background="@color/black"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textTitleMain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints"
                        app:fontFamily="@font/roboto_medium"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/or"
                        android:visibility="visible"
                        />

                    <View
                        android:id="@+id/textViewRight"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_25sdp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textTitleMain"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:ignore="MissingConstraints"
                        android:layout_marginTop="@dimen/_18sdp"
                        android:text="@string/profile_details"
                        android:visibility="visible"
                        android:background="@color/black"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/editTextLoginWith"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    style="@style/PrimaryButtonYellow"
                    android:insetTop="0dp"
                    android:insetBottom="0dp"
                    android:hint="@string/loginWithPassword"
                    android:text="@string/loginWithPassword"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:focusable="false"
                    android:paddingHorizontal="@dimen/_30sdp"
                    app:layout_constraintTop_toBottomOf="@+id/layoutOr"
                    app:cornerRadius="@dimen/_5sdp"
                    app:strokeColor="@color/_868686"
                    android:textColor="@color/_999999"
                    android:textColorHint="@color/_999999"
                    android:textSize="@dimen/_11sdp"
                    />



            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints"
            app:fontFamily="@font/roboto_medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/back_to_home_u"
            android:padding="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:visibility="visible"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>